--- a/product-3/task_6/pubspec.yaml
+++ b/product-3/task_6/pubspec.yaml
@@ -35,12 +35,14 @@ dependencies:
   dartz: ^0.10.0
   equatable: ^2.0.3
 
+
   
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
