--- a/product-3/task_6/pubspec.yaml
+++ b/product-3/task_6/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   internet_connection_checker: ^1.0.0+1
   shared_preferences: ^2.3.1
   http: ^1.2.2
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
