--- a/product-3/task_6/pubspec.yaml
+++ b/product-3/task_6/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   shared_preferences: ^2.3.1
   http: ^1.2.2
   collection: ^1.18.0
+  bloc: ^8.1.4
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
