--- a/product-3/task_6/pubspec.yaml
+++ b/product-3/task_6/pubspec.yaml
@@ -49,6 +49,11 @@ dependencies:
   bloc: ^8.1.4
   rxdart: ^0.28.0
   get_it: ^7.7.0
+  flutter_bloc: ^8.1.6
+  image_picker: ^1.1.2
+  mime: ^1.0.5
+  path: ^1.9.0
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
