--- a/product-3/task_6/pubspec.yaml
+++ b/product-3/task_6/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   mime: ^1.0.5
   path: ^1.9.0
   http_parser: ^4.0.2
+  flutter_secure_storage: ^4.2.1
+  animated_splash_screen: ^1.3.0
+  page_transition: ^2.1.0
 
 dev_dependencies:
   flutter_test:
